# aeroRL

./: AGENTS.md  BOOKMARK_LOG.md  README.md  pyproject.toml
aerorl/: __init__.py  adapters.py  config.py  losses.py  quant_ref.py  rewards.py  trainer.py  wrapper.py
benchmarks/: lmms_eval_standard_benchmark.py  reward_large_scale_real_dataset_benchmark.py  reward_model_generated_benchmark.py  reward_real_dataset_benchmark.py  reward_replay_evaluator.py  reward_value_benchmark.py  vlm_grpo_benchmark.py
examples/: reward_replay_example.jsonl  reward_value_benchmark_dataset.jsonl
reports/: benchmark-matrix-real-2026-03-23.json  benchmark-real-2026-03-23.json  benchmark-smoke-2026-03-23.json  benchmark-synth-2026-03-23.json  lmms-eval-standard-benchmark-2026-03-27.json  reward-eval-example-2026-03-23.json  reward-eval-summary-2026-03-23.json  reward-large-scale-benchmark-2026-03-23.json  reward-model-generated-benchmark-2026-03-24-large.json  reward-model-generated-benchmark-2026-03-24.json  reward-model-generated-benchmark-qwen2-vl-2b-2026-03-27.json  reward-model-generated-matrix-2026-03-27.json  reward-model-generated-replay-2026-03-24-large.jsonl  reward-model-generated-replay-2026-03-24.jsonl  reward-model-generated-replay-qwen2-vl-2b-2026-03-27.jsonl  reward-replay-real-large-2026-03-23.jsonl  reward-replay-sample-2026-03-23.jsonl  reward-value-benchmark-2026-03-23.json  reward-value-benchmark-real-large-2026-03-23.json  verification-2026-03-23.md
tests/: test_adapters_and_quant.py  test_benchmark_matrix.py  test_lmms_eval_standard_benchmark.py  test_losses.py  (+8 more)
(+7 files in other folders)
