[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerorl"
version = "0.1.0"
description = "Zero-copy-ready RL scaffolding for VLM training workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AeroRL Contributors" }
]
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
]

[tool.setuptools]
packages = ["aerorl"]
